2015-04-29  Florian Weimer  <fweimer@redhat.com>

	[BZ #18007]
	* nss/nss_files/files-XXX.c (CONCAT): Always enable stayopen.
	(CVE-2014-8121)
	* nss/tst-nss-getpwent.c: New file.
	* nss/Makefile (tests): Add new test.

2015-04-21  Arjun Shankar  <arjun.is@lostca.se>

	[BZ #18287]
	* resolv/nss_dns/dns-host.c (getanswer_r): Adjust buffer length
	based on padding.  (CVE-2015-1781)

2015-07-21  Mike Frysinger  <vapier@gentoo.org>

	[BZ #18694]
	* sysdeps/unix/sysv/linux/sparc/bits/sigaction.h: Include
	bits/wordsize.h.
	(sigaction): Declare __glibc_reserved0 only when __WORDSIZE is 64.

2015-02-16  Paul Pluzhnikov  <ppluzhnikov@google.com>

	[BZ #16618]
	* stdio-common/tst-sscanf.c (main): Test for buffer overflow.
	* stdio-common/vfscanf.c (_IO_vfscanf_internal): Compute needed
	size in bytes. Store needed elements in wpmax. Use needed size
	in bytes for extend_alloca.

2015-02-16  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #17801]
	* sysdeps/x86_64/multiarch/init-arch.c (__init_cpu_features):
	Set the bit_AVX_Fast_Unaligned_Load bit for AVX2.
	* sysdeps/x86_64/multiarch/init-arch.h (bit_AVX_Fast_Unaligned_Load):
	New.
	(index_AVX_Fast_Unaligned_Load): Likewise.
	(HAS_AVX_FAST_UNALIGNED_LOAD): Likewise.
	* sysdeps/x86_64/multiarch/memcpy.S (__new_memcpy): Check the
	bit_AVX_Fast_Unaligned_Load bit instead of the bit_AVX_Usable bit.
	* sysdeps/x86_64/multiarch/memcpy_chk.S (__memcpy_chk): Likewise.
	* sysdeps/x86_64/multiarch/mempcpy.S (__mempcpy): Likewise.
	* sysdeps/x86_64/multiarch/mempcpy_chk.S (__mempcpy_chk): Likewise.
	* sysdeps/x86_64/multiarch/memmove.c (__libc_memmove): Replace
	HAS_AVX with HAS_AVX_FAST_UNALIGNED_LOAD.
	* sysdeps/x86_64/multiarch/memmove_chk.c (__memmove_chk): Likewise.

2015-02-16  Leonhard Holz  <leonhard.holz@web.de>

	[BZ #16009]
	* string/strxfrm_l.c (STRXFRM): Allocate fixed size cache for
	weights and rules. Use do_xfrm_cached if data fits in cache,
	do_xfrm otherwise.  Moved former main loop to...
	* (do_xfrm_cached): New function.